# course_work_5-v.3

./: README.md  config.py  main.py  pyproject.toml
src/: api.py  company.py  db_creator.py  db_manager.py  vacancy.py
