[tool.poetry]
name = "poetry-bib"
version = "0.1.0"
description = ""
authors = ["artyom <artemaryj36119@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
